[project]
name = "anitalker-comfyui"
description = "a comfyui custom node for [a/AniTalker](https://github.com/X-LANCE/AniTalker)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["pytorch-lightning", "torchmetrics", "scipy", "numpy", "tqdm", "espnet", "moviepy", "python_speech_features", "transformers", "torchlm", "gfpgan"]

[project.urls]
Repository = "https://github.com/AIFSH/AniTalker-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "AniTalker-ComfyUI"
Icon = ""
